[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "pymapme"
version = "0.1.0"
description = "functionality for mapping one model into another"
readme = "README.md"
authors = ["funnydman"]

packages = [
    { include = "pymapme", from = "src" }
]

[tool.poetry.build]
generate-setup-file = false

[tool.pytest.ini_options]
pythonpath = [
    ".", "src",
]
testpaths = 'tests'

[tool.poetry.dependencies]
python = "^3.13"
pydantic = "^2.0.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.0.0"
pytest = "^7.1.3"
pytest-cov = "^4.0.0"

[tool.pylint.messages_control]
max-line-length = 120
extension-pkg-whitelist = "pydantic"
# https://stackoverflow.com/questions/10647165/pylint-complains-on-py-test-module-pytest-has-no-raises-member
# is there a better solution?
ignored-classes = "pytest"
disable = [
    "missing-docstring",
    "fixme",
    "too-few-public-methods"
]
