[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "pymapme"
version = "0.1.0"
description = "Transform Pydantic models from one structure to another with declarative field mapping."
readme = "README.md"
authors = ["funnydman"]

packages = [
    { include = "pymapme", from = "src" }
]

[tool.poetry.build]
generate-setup-file = false

[tool.pytest.ini_options]
pythonpath = [
    ".", "src",
]
testpaths = 'tests'

[tool.poetry.dependencies]
python = "^3.13"
pydantic = "^2.0.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.0.0"
pytest = "^7.1.3"
pytest-cov = "^4.0.0"
ruff = "^0.1.0"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
ignore = [
    "E501",  # line too long, handled by formatter
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = ["S101"]  # assert allowed in tests

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
